--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -12,6 +12,7 @@
 .clearfix {
     *zoom: 1;
 }
+* html .clearfix { height: 1%; }
 /* End Clearfix */
 
 /* Borrowed from those smart guys @ Fog Creek. Props to Justin & Bobby */
@@ -57,14 +58,14 @@ html, body {
 }
 
 html {
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
 }
 
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     color: #444;
-    background: #f5f5f5;
+    /*background: #f5f5f5;*/
     line-height: 22px;
 }
 
@@ -73,7 +74,8 @@ body {
     height: auto !important;
     height: 100%;
     margin: 0 0 -77px;
-    background-color: #fff;
+    background-color: #D3E8F2;
+    /*background-color: #fff;*/
     /*background-color: #E6E7E8;*/
     /*background-color: #182D39;*/
 }
@@ -95,7 +97,7 @@ article {
     background: #fff;
     position: relative;
     /*margin: 0 1px;*/
-    border: 1px solid rgb(231, 231, 231);
+    /*border: 1px solid rgb(231, 231, 231);*/
 }
 
 /* Basic typography for the entire site */
@@ -318,7 +320,8 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 }
 
 #footer.short, .push {
-    height: 38px;
+    /*height: 38px;*/
+    height: 80px;
 }
 
 #footer.short {
@@ -433,6 +436,14 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 #footer.short .inner {
     max-width: 1200px;
     margin: 0 auto;
+    text-align: center;
+}
+
+
+#footer .inner {
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
 }
 
 #page_brand {
@@ -441,6 +452,29 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
     white-space: nowrap;
     width: 100%;
 }
+
+/*NEW FOOTER STUFF*/
+.footer-container {
+    width: 800px;
+    margin:0 auto;
+}
+.main-links {display: inline-block;}
+.main-links  ul {
+    /*color: black;*/
+    width: 100px;
+    padding: 10px;
+    display:inline-block;
+}
+
+#footer  ul a {
+    color: black;
+}
+
+.main-links ul li {
+    cursor: auto;
+}
+
+/*END NEW FOOTER STUFF*/
 
 #top-header {
     /*min-height: 84px; */
@@ -999,16 +1033,58 @@ span.username_and_notification .user-name {
     padding: 30px 80px;
     /*margin:20px;*/
 }
-.overflow {
+./*overflow {
     background-color: #D3E8F2;
     margin-right: -100px;
     margin-left: -100px;
     padding-left: 100px;
     padding-right:100px;
+}*/
+/*OVERFLOW SUGGESTION FROM SE*/
+.overflow-blue { position: relative; }
+.overflow-white { position: relative; }
+
+
+.overflow-blue:before,
+.overflow-blue:after {
+    display: block;
+    content: " ";
+    position: absolute;
+    width: 9999px;
+    top: 0;
+    bottom: 0;
+    /*background: white;*/
+    background-color: #D3E8F2;
+    /*background: #c0ffee;*/
 }
+
+.overflow-white:before,
+.overflow-white:after {
+    display: block;
+    content: " ";
+    position: absolute;
+    width: 9999px;
+    top: 0;
+    bottom: 0;
+    background: white;
+    /*background-color: #D3E8F2;*/
+    /*background: #c0ffee;*/
+}
+
+
+.overflow-blue:before { left: 100%; }
+.overflow-blue:after { right: 100%; }
+
+.overflow-white:before { left: 100%; }
+.overflow-white:after { right: 100%; }
+
 .container {
     width: 1200px;
 }
+
+body, html { overflow-x: hidden; }
+/*html, body {height:100%;}*/
+* html .clearfix { height: 1%; }
 
 #search-box form input {
     /*display: inline-block;*/
@@ -4253,10 +4329,11 @@ div.topic-condensed {
 @media (max-width: 767px) {
     /* Kinda small margins for kinda small displays */
     #navbar #logo {
-        /*width: 49px;*/
-        /*height: 43px;*/
+        width: 150px;
+        height: 60px;
         /*background-image: url("/images/leaf.png");*/
     }
+
 }
 
 @media (max-width: 480px) {
@@ -4269,4 +4346,5 @@ div.topic-condensed {
     .site-wide-navigation {
         margin-left: 0;
     }
+
 }
