--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -55,6 +55,13 @@
         </span>
       </span> #}
     </div>
+    <div class="social-media">
+      <a href="https://www.facebook.com/pages/Khan-Academie/123650984422563"><img src="images/WDD_Buddycon_Icons/PNG/circular/facebook_32.png"></a>
+      <a href="https://twitter.com/KhanAcademie"><img src="images/WDD_Buddycon_Icons/PNG/circular/twitter_32.png"></a>
+      <a href="http://www.youtube.com/PerceptumNL"><img src="images/WDD_Buddycon_Icons/PNG/circular/youtube_32.png"></a>
+      <a href="http://www.linkedin.com/groups/Perceptum-4916670"><img src="images/WDD_Buddycon_Icons/PNG/circular/linkedin_32.png"></a>
+      <a href="http://www.perceptum.nl/"><img src="images/WDD_Buddycon_Icons/PNG/circular/wordpress_32.png"></a>
+    </div>
     <div class="inner">
       <div id="copyright" class="tiny" title="Version: {{ App.version|escape }}">
         <small>
