--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -138,7 +138,7 @@
     </script>
 
     <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>-->
-    <script src="http://video.khanacademie.nl/js/lib/jquery.cookie.js"></script>
+    <!-- <script src="http://video.khanacademie.nl/js/lib/jquery.cookie.js"></script> -->
     <script>
         function hideCookieMessage() {
             $.cookie("cookieMessage", "read");
