--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -1,4 +1,13 @@
 <footer id="footer">
+  <div class="social-media-banner overflow overflow-orange" style="height:300px">
+    <a href="facebook"><img src="/images/social-media-icons/facebook-256.png"></a>
+    <a href=""><img src="/images/social-media-icons/googleplus-256.png"></a>
+    <a href=""><img src="/images/social-media-icons/github-256.png"></a>
+    <a href=""><img src="/images/social-media-icons/khanacademy-256.png"></a>
+    <a href=""><img src="/images/social-media-icons/linkedin-256.png"></a>
+    <a href=""><img src="/images/social-media-icons/twitter-256.png"></a>
+    <a href=""><img src="/images/social-media-icons/youtube-256.png"></a>
+  </div>
   <div class="footer-container">
     <div class="container-fluid">
       <div class="main-links">
