--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-{% extends "new_page_template.html" %}
+{% extends "page_template.html" %}
 {% block meta_page_title %}Sign In | {% endblock meta_page_title %}
 {% import 'macros/login_buttons.html' as login_macros %}
 
