--- a/templates/profile_template.html
+++ b/templates/profile_template.html
@@ -1,4 +1,4 @@
-{% extends "new_page_template.html" %}
+{% extends "page_template.html" %}
 
 {% import 'macros/profiles.html' as profile_macros %}
 {% import 'macros/analytics.html' as analytics %}
